# cybrchat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cybrchat/: main.py
docs/: index.md
tests/: test_main.py
