[tool.poetry]
name = "cybrchat"
version = "0.1.0"
description = ""
authors = ["cybrvybe <alexfigueroa.cybr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pygments = "^2.18.0"
anthropic = "^0.34.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
